--- a/src/pages/Detail/style/index.scss
+++ b/src/pages/Detail/style/index.scss
@@ -2,8 +2,8 @@ $color-primary:#CECECE;
 
 #loading{
     background:#616978;
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -11,7 +11,6 @@ $color-primary:#CECECE;
 }
 #background-area-detail{
     background:#616978;
-    width:100vw;
     height:100vh;
     padding:1rem;
     color:white;
@@ -78,6 +77,5 @@ main{
     color:$color-primary;
     align-items:flex-start;
     margin:3rem 0;
-    gap: 0.5rem;
-   
+    gap: 0.3rem;
 }
