--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,7 +1,7 @@
 body{
     margin:0;
     padding:0;
-    overflow: hidden;
+    overflow-x: hidden;
     width:100vw;
     box-sizing: border-box;
     height:100vh;
@@ -10,4 +10,5 @@ body{
 *{
     margin:0px;
     padding:0;
+    box-sizing: border-box;
 }
